--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,31 @@
 spring:
-    jpa:
-        show-sql: true       # вывод SQL-запросов
-output:
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: 
+  
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+  
+  h2:
+    console:
+      enabled: true
+  
+  output:
     ansi:
-    enabled: always    # цветной вывод логотипа
-logging:
-    pattern:
-        dateformat: "yyyy-MM-dd HH:mm:ss"  # кастомный формат даты в логах
+      enabled: always
 
+logging:
+  pattern:
+    dateformat: "yyyy-MM-dd HH:mm:ss"
+
+server:
+  port: 8080
+  
 app:
-    welcome-message: "Welcome to Spring blog!"  # наше кастомное сообщение
-    admin-email: "admin@examplemail.com"
-    page-size: 10
+  welcome-message: "Welcome to Spring blog!"
+  admin-email: "admin@example.com"
+  page-size: 10
