--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -7,9 +7,12 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: false
 
   h2:
     console:
       enabled: false
+
+server:
+  port: ${PORT:8080}
