--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: ${JDBC_DATABASE_URL}
-    username: ${DATABASE_USERNAME:postgres}
-    password: ${DATABASE_PASSWORD:password}
+    username: ${DATABASE_USERNAME}
+    password: ${DATABASE_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
   jpa:
