--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -24,3 +24,6 @@ jobs:
 
       - name: Run Checkstyle
         run: ./gradlew checkstyleMain
+
+      - name: Run Checkstyle
+        run: ./gradlew checkstyleMain checkstyleTest
