sonar coverage fix 2

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,10 +10,19 @@ sonar.java.test.binaries=build/classes/java/test
 
 sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
 
-# ??????????
-sonar.exclusions=**/dto/**,**/config/**
+# ?????????? ?? coverage ??????? (?? ?????? ?? ????? ????????)
+sonar.coverage.exclusions=\
+  **/dto/**,\
+  **/config/**,\
+  **/model/**,\
+  **/mapper/**,\
+  **/component/ModelGenerator.java,\
+  **/component/DataSeeder.java,\
+  **/component/RsaKeyProperties.java
 
-# ????????? ?????????????? CSRF ??? REST API
-sonar.issue.ignore.multicriteria=e1
-sonar.issue.ignore.multicriteria.e1.ruleKey=java:S4502
+# ?????????? CSRF warning ??? REST API
+sonar.issue.ignore.multicriteria=e1,e2
+sonar.issue.ignore.multicriteria.e1.ruleKey=squid:S4502
 sonar.issue.ignore.multicriteria.e1.resourceKey=**/SecurityConfig.java
+sonar.issue.ignore.multicriteria.e2.ruleKey=java:S4502
+sonar.issue.ignore.multicriteria.e2.resourceKey=**/SecurityConfig.java
